--- a/public/dogs/index.html
+++ b/public/dogs/index.html
@@ -33,7 +33,7 @@
 <body class="dark:bg-gray-800 dark:text-white relative flex flex-col min-h-screen"><header class="container flex justify-between md:justify-between gap-4 flex-wrap p-6 mx-auto relative">
   <a href="https://jskaza.github.io/safe-with-us/" class="capitalize font-extrabold text-2xl">
     
-    <img src="{{ .Site.BaseURL }}/img/safe_with_us.png" alt="Safe With Us Dog Adoption Event" class="h-8 max-w-full" />
+    <img src="https://jskaza.github.io/safe-with-us/img/safe_with_us.png" alt="Safe With Us Dog Adoption Event" class="h-8 max-w-full" />
     
   </a>
   <button class="mobile-menu-button md:hidden">
@@ -76,7 +76,7 @@
 <a href="https://jskaza.github.io/safe-with-us/dogs/bubbles/">
   
   <div class="relative">
-    <img src="{{ .Site.BaseURL }}/img/bubbles/bubbles_1.jpg" alt="Bubbles" class="rounded-lg shadow-sm w-full h-52 object-cover" />
+    <img src="https://jskaza.github.io/safe-with-us/img/bubbles/bubbles_1.jpg" alt="Bubbles" class="rounded-lg shadow-sm w-full h-52 object-cover" />
   </div>
   
   <div class="my-2 text-xl font-semibold">Bubbles</div>
@@ -88,7 +88,7 @@
 <a href="https://jskaza.github.io/safe-with-us/dogs/biddie/">
   
   <div class="relative">
-    <img src="{{ .Site.BaseURL }}/img/biddie/biddie_1.jpeg" alt="Biddie" class="rounded-lg shadow-sm w-full h-52 object-cover" />
+    <img src="https://jskaza.github.io/safe-with-us/img/biddie/biddie_1.jpeg" alt="Biddie" class="rounded-lg shadow-sm w-full h-52 object-cover" />
   </div>
   
   <div class="my-2 text-xl font-semibold">Biddie</div>
