update image urls

--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@ If you’re interested in meeting some of our adoptable pals, we recommend filli
 <body class="dark:bg-gray-800 dark:text-white relative flex flex-col min-h-screen"><header class="container flex justify-between md:justify-between gap-4 flex-wrap p-6 mx-auto relative">
   <a href="https://jskaza.github.io/safe-with-us/" class="capitalize font-extrabold text-2xl">
     
-    <img src="/img/safe_with_us.png" alt="Safe With Us Dog Adoption Event" class="h-8 max-w-full" />
+    <img src="https://jskaza.github.io/safe-with-us/img/safe_with_us.png" alt="Safe With Us Dog Adoption Event" class="h-8 max-w-full" />
     
   </a>
   <button class="mobile-menu-button md:hidden">
